SOCINT-409 Attempting to break modularity for Orika