@@ -7,4 +7,5 @@ RUN groupadd -g 985 rhsvc && \
 USER rhsvc
 COPY target/rhsvc-0.0.0.jar /opt/rhsvc.jar
 
-ENTRYPOINT [ "java", "-jar", "/opt/rhsvc.jar" ]
+#ENTRYPOINT [ "java", "-jar", "$JAVA_TOOL_OPTIONS", "/opt/rhsvc.jar" ]
+ENTRYPOINT [ "java", "-jar", "--add-opens", "java.base/java.lang=ALL-UNNAMED", "/opt/rhsvc.jar" ]
